--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "grunt-mocha-test": "^0.11.0",
     "mocha": "^1.20.1",
     "sinon": "^1.10.3"
+  },
+  "dependencies": {
+    "q": "^1.0.1"
   }
 }
