--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "grunt-mocha-test": "^0.11.0",
     "mocha": "^1.20.1",
     "sinon": "^1.10.3",
-    "chai-as-promised": "^4.1.1"
+    "chai-as-promised": "^4.1.1",
+    "memwatch": "^0.2.2"
   },
   "dependencies": {
     "q": "^1.0.1"
