Squashed commit of the following:
commit fd9ebd2c1024d278aca14ced7a3141aedea428b4
Author: Hector Virgen <hvirgen@tagged.com>
Date:   Sat Jul 19 14:07:55 2014 -0700

    Start work on integration testing

commit 8cd7591be785b63d49253d361c95a1b836bee189
Author: Nidhi <nsankhala@tagged.com>
Date:   Fri Jul 18 12:14:33 2014 -0700

    Test Script to test adapter

commit 977717c3158dd8c49f7d80ea65524cf02f9ee424
Author: Hector Virgen <hvirgen@tagged.com>
Date:   Thu Jul 17 22:20:45 2014 -0700

    Adds http adapter for node

--- a/package.json
+++ b/package.json
@@ -20,6 +20,11 @@
   "bugs": {
     "url": "https://github.com/tagged/api-client-js/issues"
   },
+  "dependencies": {
+    "q": "^1.0.1",
+    "request": "^2.37.0",
+    "lodash": "^2.4.1"
+  },
   "homepage": "https://github.com/tagged/api-client-js",
   "devDependencies": {
     "blanket": "^1.1.6",
@@ -33,8 +38,5 @@
     "sinon": "^1.10.3",
     "chai-as-promised": "^4.1.1",
     "memwatch": "^0.2.2"
-  },
-  "dependencies": {
-    "q": "^1.0.1"
   }
 }
