--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   "dependencies": {
     "bluebird": "^2.2.2",
     "btoa": "^1.1.2",
-    "request": "^2.37.0"
+    "request": "^2.37.0",
+    "grunt-contrib-uglify": "^0.5.0"
   },
   "homepage": "https://github.com/tagged/api-client-js",
   "devDependencies": {
@@ -37,6 +38,7 @@
     "mocha": "^1.20.1",
     "sinon": "^1.10.3",
     "chai-as-promised": "^4.1.1",
-    "memwatch": "^0.2.2"
+    "memwatch": "^0.2.2",
+    "grunt-contrib-concat": "^0.5.0"
   }
 }
