--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
     "url": "https://github.com/ifwe/api-client-js/issues"
   },
   "dependencies": {
+    "agentkeepalive": "2.0.3",
     "bluebird": "^2.2.2",
     "btoa": "^1.1.2",
-    "request": "^2.37.0",
-    "grunt-contrib-uglify": "^0.5.0"
+    "grunt-contrib-uglify": "^0.5.0",
+    "request": "^2.37.0"
   },
   "homepage": "https://github.com/ifwe/api-client-js",
   "devDependencies": {
