--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tagged-api",
-  "version": "0.3.3",
+  "version": "0.4.0",
   "description": "API client for Tagged with support for nodejs and angularjs",
   "main": "lib/node.js",
   "scripts": {
@@ -21,10 +21,11 @@
     "url": "https://github.com/ifwe/api-client-js/issues"
   },
   "dependencies": {
-    "agentkeepalive": "2.1.1",
-    "bluebird": "3.3.5",
-    "btoa": "1.1.2",
-    "request": "2.72.0"
+    "agentkeepalive": "4.1.0",
+    "bluebird": "3.7.2",
+    "btoa": "1.2.1",
+    "grunt-cli": "^1.3.2",
+    "request": "2.88.0"
   },
   "homepage": "https://github.com/ifwe/api-client-js",
   "devDependencies": {
